--- a/index.html
+++ b/index.html
@@ -16,6 +16,44 @@
   <link data-trunk rel="copy-dir" href="public/assets" />
 </head>
 
-<body></body>
+<body>
+  <body>
+    <div id="app">
+      <div id="loading-screen"
+        style="display: flex; justify-content: center; align-items: center; height: 100vh; font-family: sans-serif;">
+        <div style="text-align: center;">
+          <div class="spinner"></div>
+          <p>FuelFinder is warming up...</p>
+        </div>
+      </div>
+    </div>
+  <style>
+    .spinner {
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #3498db;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin: 0 auto 10px;
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+  </style>
+  <script>
+    function hideLoader() {
+      const loader = document.getElementById('loading-screen');
+      if (loader) loader.style.display = 'none';
+    }
+  </script>
+</body>
 
 </html>
