--- a/index.html
+++ b/index.html
@@ -17,19 +17,15 @@
 </head>
 
 <body>
-  <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
-  <script>
-    var vConsole = new window.VConsole();
-  </script>
-  <div id="app">
-    <div id="loading-screen"
-      style="display: flex; justify-content: center; align-items: center; height: 100vh; font-family: sans-serif;">
-      <div style="text-align: center;">
-        <div class="spinner"></div>
-        <p>FuelFinder is warming up...</p>
+    <div id="app">
+      <div id="loading-screen"
+        style="display: flex; justify-content: center; align-items: center; height: 100vh; font-family: sans-serif;">
+        <div style="text-align: center;">
+          <div class="spinner"></div>
+          <p>FuelGetter is warming up...</p>
+        </div>
       </div>
     </div>
-  </div>
   <style>
     .spinner {
       border: 4px solid #f3f3f3;
